# vex-generation-service

./: .gitignore  .python-version  NOTICE  README.md  REUSE.toml  analysis.py  analysisReport.py  function.py  graph.py  main.py  pyproject.toml  requirements-dev.txt  utils.py  vexDocument.py  vexGenerator.py
examples/: input.json  input.json.license  output.json
src/vex_generation_service/: __init__.py  __main__.py  analysis.py  analysisReport.py  function.py  graph.py  main.py  utils.py  vexDocument.py  vexGenerator.py
