# SPDX-FileCopyrightText: 2025-present OpenRefactory, Inc.
#
# SPDX-License-Identifier: Apache-2.0
[project]
name = "vex-generation-service"
version = "0.1.0"
description = "VEX Generation Service"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = []

[project.scripts]
vex-generation-service = "vex_generation_service.main:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]